--- a/core/templates/authenticated/sidebar/student.html
+++ b/core/templates/authenticated/sidebar/student.html
@@ -1,5 +1,5 @@
 {% extends "authenticated/sidebar/base.html" %}
-{% block sidebar-content %}
+{% block sidebar_content %}
 		{% include "authenticated/sidebar/ticker.html" with sidebar_info=vm.sidebar %}
 		{% include "authenticated/sidebar/listings.html" with sidebar_info=vm.sidebar %}
 {% endblock %}
