--- a/core/static/css/common.css
+++ b/core/static/css/common.css
@@ -1,7 +1,7 @@
 /* Headers */
 .header5 {
     font-family: Georgia, serif;
-    color: #4E443C;
+    color: #F5FFFA;
     font-variant: small-caps;
     text-transform: none;
     font-weight: 100;
