All settings pages and sidebars working properly. verify.

--- a/core/templates/authenticated/settings/parent.html
+++ b/core/templates/authenticated/settings/parent.html
@@ -1,10 +1,10 @@
-% extends "authenticated/settings/base.html" %}
+{% extends "authenticated/settings/base.html" %}
 
 {% block customdata %}
   <h4 class='header4'> Children:
-    	{% for child in vm.childlist %}
-    		<div>First Name: {{ vm.authenticated_child_body_firstname }} Last Name: {{ vm.authenticated_child_body_lastname }} </div><br>
-    		<div>Class: {{ vm.authenticated_child_body.class }} Sec: {{ vm.authenticated_child_body.section}}</div><br>
+      {% for parent_child in vm.authenticated_body.child_list %}
+          <div>Name: {{ parent_child.child.first_name }} {{ parent_child.child.last_name }} </div>
+          <div>Class: {{ parent_child.standard }} - {{ parent_child.division }}</div><br>
     	{% endfor %}
 	</h4>
 {% endblock %}
