--- a/core/templates/authenticated/sidebar/admin.html
+++ b/core/templates/authenticated/sidebar/admin.html
@@ -1,6 +1,6 @@
 {% extends "authenticated/sidebar/base.html" %}
-{% block sidebar-content %}
-	{% for classroom in vm.sidebar.classroomlist %}
+{% block sidebar_content %}
+    {% for classroom in vm.sidebar.listings %}
 		{% include "authenticated/sidebar/classroom.html" %}
 	{% endfor %}
 {% endblock %}
