All settings pages and sidebars working properly. verified.

--- a/core/templates/authenticated/settings/admin.html
+++ b/core/templates/authenticated/settings/admin.html
@@ -1,2 +1,5 @@
 {% extends "authenticated/settings/base.html" %}
+{% block sidebar %}
+    {% include "authenticated/sidebar/admin.html" %}
+{% endblock %}
 {% block customdata %}{% endblock %}
