--- a/core/templates/authenticated/settings/parent.html
+++ b/core/templates/authenticated/settings/parent.html
@@ -1,10 +1,11 @@
 {% extends "authenticated/settings/base.html" %}
-
+{% block sidebar %}
+    {% include "authenticated/sidebar/parent.html" %}
+{% endblock %}
 {% block customdata %}
   <h4 class='header4'> Children:
-      {% for parent_child in vm.authenticated_body.child_list %}
-          <div>Name: {{ parent_child.child.first_name }} {{ parent_child.child.last_name }} </div>
-          <div>Class: {{ parent_child.standard }} - {{ parent_child.division }}</div><br>
+      {% for child_info in vm.authenticated_body.child_list %}
+          {% include "authenticated/sidebar/parent_child_header.html" %}<br>
     	{% endfor %}
 	</h4>
 {% endblock %}
