--- a/core/templates/authenticated/sidebar/parent_child_header.html
+++ b/core/templates/authenticated/sidebar/parent_child_header.html
@@ -1,5 +1,4 @@
 <div class="childinfo">
-
-    <div>{{ parent_child.child.first_name}} {{ parent_child.child.last_name }}</div>
-    <div> {{parent_child.child.standard}} {{parent_child.child.division}} </div>
+    <div>{{ child_info.child.first_name }} {{ child_info.child.last_name }}</div>
+    <div> {{ child_info.standard }} {{ child_info.division }} </div>
 </div>
