--- a/hwcentral/templates/header.html
+++ b/hwcentral/templates/header.html
@@ -1,7 +1,6 @@
-<div id="header">
-    <span class="header_element" id="banner">
-        <a href="{% url 'index' %}">HW Central</a>
-    </span>
+<div class='navbar navbar-inverse navbar-fixed-top'>
+        <a class='navbar-brand banner' href="{% url 'index' %}">HW Central</a>
+		<p class='tagline navbar-brand'>Education for the New Generation.</p> 
     {% include 'location_context_box.html' %} {# This can be used later for location context (breadcrumbs) #}
     {% include 'user_context_box.html' %}
 </div>
