--- a/hwcentral/static/css/index.css
+++ b/hwcentral/static/css/index.css
@@ -1,42 +1,101 @@
-.indeximg {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 1196px;
-    -webkit-filter: grayscale(50%);
-    -moz-filter: grayscale(50%);
-    filter: grayscale(50%);
+.landingbox {
+}
+body{
+	padding-top: 61px;
+}
+.landingimage{
+	opacity: 1.0;
+	width:100%;
+	height: 700px;
+	border:10px solid;	
 }
 
-#body {
-    padding-bottom: 2px;
+img {
+width: inherit;
+
+}
+.lead{
+	font-size: 36px;
 }
 
-.indexsum {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 565px;
-    height: 522px;
-    background-color: #000;
-    opacity: 0.85;
+.indexbuttons button{
+	vertical-align: center;
+	text-align: center;
+	color: #000000;
 }
 
-.indextext {
-    width: 560px;
-    margin-top: 20px;
+.landingtextmission{
+vertical-align: center;
+text-align: center;
+position: absolute;
+margin-top: 14%;
+background-color: #000000;
+color: #F5FFFA;
+width:100%;
+height:28%;
+opacity: 0.70;
+border-radius: 10px;
+padding-left: 20px;
+margin-left: 10px;
+margin-right:10px;
+padding-right: 20px;
+}
+.landingtextleft{
+padding-left: 25px;
+padding-right: 20px;
+position: absolute;
+margin-top: 18%;
+background-color: #000000;
+color: #F5FFFA;
+width:50%;
+height:28%;
+opacity: 0.70;
+border-radius: 10px;
+margin-left: 10px;
+text-align: center;
 }
 
-.innerlanding {
-    color: #fff;
-    opacity: 1.0;
+.landingtextright{
+border-radius: 10px;
+padding-left: 25px;
+padding-right: 20px;
+position: absolute;
+margin-top: 15%;
+margin-left: 50%;
+margin-right: 10px;
+background-color: #000000;
+color: #F5FFFA;
+width:50%;
+height:28%;
+opacity: 0.70;
+text-align: center;
 }
 
-.regdiv {
-    color: #fff;
-    opacity: 1.0;
-    margin-left: 20px;
-    margin-top: 20px;
+.landingtextend{
+vertical-align: center;
+text-align: center;
+position: absolute;
+margin-top: 14%;
+background-color: #000000;
+color: #F5FFFA;
+width:100%;
+height:28%;
+opacity: 0.70;
+border-radius: 10px;
+padding-left: 20px;
+margin-left: 10px;
+padding-right: 20px;
 }
 
+html{
+	padding:0px;
+	margin:0px;
+}
 
+.mission{
+	font-size: 36px;
+}
+
+p {
+	font-size: 30px;
+}
