--- a/hwcentral/templates/base.html
+++ b/hwcentral/templates/base.html
@@ -19,24 +19,20 @@
     <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon"/>
 
     <!-- Styles -->
-
     <link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css"/>
-
-    <link rel="stylesheet" href="{% static 'css/header/header.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/header/banner.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/header/user_context_box.css' %}" type="text/css"/>
-
-    <link rel="stylesheet" href="{% static 'css/footer/footer.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/footer/copyright.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/footer/additional_info_box.css' %}" type="text/css"/>
-
-    <link rel="stylesheet" href="{% static 'css/chosen/chosen.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css.map' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.theme.min.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.theme.css.map' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/header/base.css' %}" type="text/css"/> 
     {% block css %}{% endblock css %}
 
 </head>
 
 <body>
-<div id="container">
+<div>
 
     <!-- Header -->
 
@@ -46,7 +42,7 @@
 
     <!-- Body -->
 
-    <div id="body">
+    <div>
         {% block body %}{% endblock body %}
     </div>
 
@@ -61,6 +57,9 @@
     <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/chosen/chosen.jquery.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/npm.js' %}"></script>
     {% block js %}{% endblock js %}
 
 </div>
