--- a/hwcentral/templates/footer.html
+++ b/hwcentral/templates/footer.html
@@ -1,8 +1,7 @@
-<div id="footer">
-    <span class="footer_element copysym" id="copyright">&copy 2014 HW Central</span>
-    <span id="additional_info_box" class="footer_element">
-        <span class="link"><a href="{% url 'news' %}">News</a></span>
-        <span class="link"><a href="{% url 'about' %}">About</a></span>
-        <span class="link"><a href="{% url 'contact' %}">Contact</a></span>
-    </span>
+<div class='navbar navbar-inverse navbar-static-bottom'>
+    <p class='navbar-brand navbar-right'>&copy 2015 HW Central &nbsp</p>
+    <ul class="nav navbar-nav footer">
+        <li><a href="{% url 'about' %}">About Us</a></li>
+        <li><a href="mailto:contact@homeworkcentral.in?" >Contact : contact@homeworkcentral.in</a> <li>
+    </ul>
 </div>
