Landing page final changes

--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -24,15 +24,15 @@
             <p> Doing homework after 6 hours of school is no cakewalk but correcting it for a class of 50 is way harder. Owing to HWCentral's automated homework correction, this will no longer be a headache.</p>
         </div>    
         <div class='landingbox'>
-            <img class='landingimage' src="{% static 'img/indexone.jpg' %}">
+            <img class='landingimage' src="{% static 'img/index/indexone.jpg' %}">
         </div>
     </div>
     <div class='landingimagebox'>
         <div class='landingtextright'>
-            <p> Cant wait till the parent-teacher meeting to know how your child is doing ? With HW Central's visual intuitive child performance tracker, you'll never be left in the dark. </p>
+            <p> Can't wait till the parent-teacher meeting to know how your child is doing ? With HW Central's visual intuitive child performance tracker, you'll never be left in the dark.</p>
         </div>    
         <div class='landingbox'>
-            <img class='landingimage' src="{% static 'img/indextwo.jpg' %}">
+            <img class='landingimage' src="{% static 'img/index/indextwo.jpg' %}">
         </div>
     </div>
     <div class='landingimagebox'>
@@ -40,7 +40,7 @@
             <p> With HWCentral's advanced plagiarism checker and its ability to generate unique questions of the same difficulty level to each student, you can be sure that good grades will be the only things exactly identical.</p>
         </div>    
         <div class='landingbox'>
-            <img class='landingimage' src="{% static 'img/indexthree.jpg' %}">
+            <img class='landingimage' src="{% static 'img/index/indexthree.jpg' %}">
         </div>
     </div>
     <div class='landingimagebox'>
@@ -48,7 +48,7 @@
            <p> HWCentral is well equipped with a huge question bank and assignments for a variety of subjects, classes, and difficulty levels, tailored to ensure that every topic of the syllabus is thoroughly tested.</p>
         </div>    
         <div class='landingbox'>
-            <img class='landingimage' src="{% static 'img/indexfour.jpg' %}">
+            <img class='landingimage' src="{% static 'img/index/indexfour.jpg' %}">
         </div>
     </div>
     <div class='landingimagebox'>
@@ -56,7 +56,7 @@
             <p> With sagging shoulders and a bad posture becoming a common sight, HWCentral aims to make bags lighter, minds brighter, and schools greener by moving homework online. </p>
         </div>    
         <div class='landingbox'>
-            <img class='landingimage' src="{% static 'img/indexfive.jpg' %}">
+            <img class='landingimage' src="{% static 'img/index/indexfive.jpg' %}">
         </div>
     </div>
     <div class='landingimagebox'>
@@ -64,7 +64,7 @@
             <p> HWCentral's large collection of ready-to-assign questions allows teachers to ensure that their students get all the practice they need, thus enabling more time for student-teacher interactions. </p>
         </div>    
         <div class='landingbox'>
-            <img class='landingimage' src="{% static 'img/indexsix.jpg' %}">
+            <img class='landingimage' src="{% static 'img/index/indexsix.jpg' %}">
         </div>
     </div>
 
