small changes to about and index

--- a/hwcentral/templates/about.html
+++ b/hwcentral/templates/about.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="{% static 'css/about.css' %}" type="text/css"/> 
 {% endblock css %}
 {% block body %}
+    <h1 class="well">About Us</h1>
+    <p class='about'> HWCentral is an Internet platform built specifically to improve how students learn outside of the classroom. It streamlines how home work is assigned and corrected, freeing up teachers and schools to focus on what they do best - teaching.
+    Targeted questions, an expansive question bank and an immersive interface allow schools to reduce repetitive correction and concentrate on educating and evaluating their students. The platform also uses state of the art analytics to provide teachers and parents with a detailed understanding of student weaknesses and how they can be corrected.</p>
+
+    <p class='lead'>Education just entered the 21st century.</p>
+
     <h2 class="well">Meet Our Team</h2>
         <div class='row'>
             <div class='col-md-4'>
@@ -32,9 +38,7 @@
                 <img class="founder_image" src="{% static 'img/about/Sharang.jpg' %}" >
                 <h4>Sharang Pai</h4>
 
-                <p>Sharang currently studies in the 11th grade and is very interested in the applications of online games as
-                    educational tools. He founded HomeWork Central to create an accessible, high quality tool that could
-                    supplement primary and secondary education in India.</p>
+                <p>Sharang is a Delhi Public School, Pune alumnus as well as ex-Headboy and has always been interested in applications of online games as educational tools. As a co-founder of Homework Central, he aims to integrate technology with education to build a high quality tool that could supplement primary and secondary education in India. Having graduated through high school in India, he wants to eliminate the existing problems and build on the current system to make learning more interactive and complete.  </p>
 
             </div>
         </div>
@@ -50,9 +54,7 @@
             <img class="intern_image" src="{% static 'img/about/Pujan.jpg' %}">
             <h4>Pujan Parikh</h4>
 
-            <p>Pujan is a fourth year student at the Massachusetts Institute of Technology and is very interested in
-                integrating informal teaching techniques with mainstream education in India. Born and raised in India, he is
-                very familiar with the system and also has previous experience in teaching roles.</p>
+            <p>Pujan is a Delhi Public School, Pune alumnus. Ever since an early age, he has been inclined towards the world of writing and literature and wishes to pursue it as a career. Having studied a great deal about computers and other technological phenomena throughout his school life, he aims to help HWCentral reach its goal and give its users the best they deserve.</p>
 
             </div>
     </div>
