--- a/hwcentral/static/css/about.css
+++ b/hwcentral/static/css/about.css
@@ -17,7 +17,7 @@ body{
 }
 
 p{
-	text-align: center;
+	text-align: justify;
 	padding: 20px;
 }
 
@@ -26,5 +26,16 @@ h4{
 }
 
 h3{
+	text-align: center;
+}
+
+.about{
+	font-size: 24px;
+	text-align: left;
+	font-style: italic;
+}
+
+.lead{
+	font-size: 30px;
 	text-align: center;
 }
