--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -10,7 +10,7 @@
 {% block body %}
     <div class='landingimagebox'>
         <div class='landingtextmission'>
-            <p class='lead'> Our aim at HomeWork Central is to streamline how Homework is assigned and corrected, by using a cloud based web platform so as to reduce the teachers' workload. </br>
+            <p class='mission'> Our aim at HomeWork Central is to streamline how Homework is assigned and corrected, by using a cloud based web platform so as to reduce the teachers' workload. </br>
             <div class='indexbuttons'>
                 <a href="mailto:contact@homeworkcentral.in?" ><button type='button' class='lead btn btn-success btn-lg'> Lets Get Started ! </button></a>
             </div>
