--- a/hwcentral/templates/about.html
+++ b/hwcentral/templates/about.html
@@ -6,8 +6,7 @@
 {% endblock css %}
 {% block body %}
     <h1 class="well">About Us</h1>
-    <p class='about'> HWCentral is an Internet platform built specifically to improve how students learn outside of the classroom. It streamlines how home work is assigned and corrected, freeing up teachers and schools to focus on what they do best - teaching.
-    Targeted questions, an expansive question bank and an immersive interface allow schools to reduce repetitive correction and concentrate on educating and evaluating their students. The platform also uses state of the art analytics to provide teachers and parents with a detailed understanding of student weaknesses and how they can be corrected.</p>
+    <p class='about'> HW Central is an online homework platform for Indian schools. It is tailored specifically to improve the way students learn outside the classroom, and to streamline the way Homework is assigned and corrected, thus enabling teachers and schools to devote more time towards what they do best - teach. Automated correction, an expansive question bank, and an immersive interface, ensure a hassle-free teaching teaching environment. Online report cards and performance analytics provide parents and teachers unprecedented information about student progress and problem areas.</p>
 
     <p class='lead'>Education just entered the 21st century.</p>
 
@@ -17,9 +16,9 @@
                 <img class="founder_image" src="{% static 'img/about/Sidhant.jpg' %}">
                 <h4>Sidhant Pai</h4>
 
-                <p>Sidhant is a fourth year student at the Massachusetts Institute of Technology and is very interested in
-                    integrating informal teaching techniques with mainstream education in India. Born and raised in India, he is
-                    very familiar with the system and also has previous experience in teaching roles.</p>
+                <p>Sidhant is a graduate of the Massachusetts Institute of Technology and is very interested in
+                    integrating informal teaching techniques with mainstream education in India. He is a serial entrepreneur and is looking to change the way education is looked at in both urban and rural India. Born and raised in Pune, he is
+                    very familiar with the system and also has previous experience in teaching roles and is looking to apply the expertise he has gained along the way.</p>
 
             </div>
         
@@ -28,9 +27,7 @@
                 <img class="founder_image" src="{% static 'img/about/Oasis.jpg' %}" >
                 <h4>Oasis Vali</h4>
 
-                <p>Oasis is a fourth year student at the University of Waterloo studying 'Mechatronics'. He is passionate about
-                    integrating technology with the educational system and, having grown up in India, is familiar with the
-                    system. He also has a lot of previous experience working on back-end web applications.</p>
+                <p>Oasis is a Software Developer with a keen interest in large-scale web service architecture. He has worked on designing, deploying and maintaining low latency web services serving up to 400 million page requests per month. He holds a Bachelor's degree in Mechatronics Engineering from the University of Waterloo in Canada. He is interested in pushing the boundaries for the application of technology in Indian education, and having grown up in India, is familiar with the Indian education system. He is also a Delhi Public School, Pune alumnus.</p>
             </div>  
 
 
@@ -38,7 +35,7 @@
                 <img class="founder_image" src="{% static 'img/about/Sharang.jpg' %}" >
                 <h4>Sharang Pai</h4>
 
-                <p>Sharang is a Delhi Public School, Pune alumnus as well as ex-Headboy and has always been interested in applications of online games as educational tools. As a co-founder of Homework Central, he aims to integrate technology with education to build a high quality tool that could supplement primary and secondary education in India. Having graduated through high school in India, he wants to eliminate the existing problems and build on the current system to make learning more interactive and complete.  </p>
+                <p>Sharang is pursuing his studies in Computers and Communications at Manipal Institute of Technology and has always been interested in applications of online games as educational tools. As a co-founder of Homework Central, he aims to integrate technology with education to build a high quality tool that could supplement primary and secondary education in India. Having graduated through high school in India, he wants to eliminate the existing problems and build on the current system to make learning more interactive and complete.  </p>
 
             </div>
         </div>
