removed ambiguous wording

--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -37,7 +37,8 @@
     </div>
     <div class='landingbox'>
         <div class='landingtextleft landingtext'>
-            <p> With HWCentral's advanced plagiarism checker and its ability to generate unique questions of the same difficulty level for each student, you can be sure that good grades will be the only things exactly identical.</p>
+            <p> With HWCentral's advanced plagiarism checker and its ability to generate unique questions for each
+                student, you can be sure that good grades will be the only things exactly identical.</p>
         </div>    
         <div class='landingimagebox'>
             <img class='landingimage' src="{% static 'img/index/indexthree.jpg' %}">
