--- a/core/static/css/login.css
+++ b/core/static/css/login.css
@@ -5,17 +5,17 @@
 	background-color: #000000;
 	color: #F5FFFA;
 	width:50%;
-	height:40%;
 	opacity: 0.70;
 	border-radius: 10px;
 	margin-left: 10px;
 	text-align: left;
+	min-width: 425px;
 }
 
 .loginimage{
 	opacity: 1.0;
 	width:100%;
-	height: 700px;
+	height: 10%;
 	border:10px solid;	
 }
 body{
@@ -30,11 +30,20 @@ input{
 }
 
 .btn{
-	font-size: 24px;
+	font-size: 15px;
+	font-size: 0.5vw;
 }
 
 .loginbuttons input{
 	vertical-align: center;
 	text-align: center;
 	color: #000000;
+}
+
+#id_username, #id_password{
+	width: 40%;
+	height: 30%;
+}
+.field_wrapper{
+	min-width: 400px;
 }
